// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidatedInputField handles invalid updates 1`] = `
<ValidatedInputField
  onChange={[MockFunction]}
  parse={[Function]}
  placeholder="validated input field"
  render={[Function]}
  value={
    t {
      "val_": 15,
    }
  }
>
  <div
    className="invalid"
  >
    <InputField
      classNames={
        Object {
          "invalid": true,
          "valid": false,
        }
      }
      onChange={[Function]}
      placeholder="validated input field"
      value="abcdefg"
    >
      <input
        className="invalid"
        onChange={[Function]}
        placeholder="validated input field"
        type="text"
        value="abcdefg"
      />
    </InputField>
  </div>
</ValidatedInputField>
`;

exports[`ValidatedInputField handles valid updates 1`] = `
<ValidatedInputField
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          t {
            "val_": 16,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  parse={[Function]}
  placeholder="validated input field"
  render={[Function]}
  value={
    t {
      "val_": 15,
    }
  }
>
  <div
    className="valid"
  >
    <InputField
      classNames={
        Object {
          "invalid": false,
          "valid": true,
        }
      }
      onChange={[Function]}
      placeholder="validated input field"
      value="16"
    >
      <input
        className="valid"
        onChange={[Function]}
        placeholder="validated input field"
        type="text"
        value="16"
      />
    </InputField>
  </div>
</ValidatedInputField>
`;

exports[`ValidatedInputField renders 1`] = `
<ValidatedInputField
  onChange={[MockFunction]}
  parse={[Function]}
  placeholder="validated input field"
  render={[Function]}
  value={
    t {
      "val_": 15,
    }
  }
>
  <div
    className="valid"
  >
    <InputField
      classNames={
        Object {
          "invalid": false,
          "valid": true,
        }
      }
      onChange={[Function]}
      placeholder="validated input field"
      value="15"
    >
      <input
        className="valid"
        onChange={[Function]}
        placeholder="validated input field"
        type="text"
        value="15"
      />
    </InputField>
  </div>
</ValidatedInputField>
`;
